--- a/MakefileTestIcon,fe1
+++ b/MakefileTestIcon,fe1
@@ -1,11 +1,11 @@
 #!/usr/bin/env riscos-amu -f
-# Makefile for testfinddrives
+# Makefile for testicon
 #
 
 #
 # Program specific options:
 #
-COMPONENT  = testfinddrives
+COMPONENT  = testicon
 
 # Specifies additional targets for startup
 #INITTARGET = inittarget
@@ -33,8 +33,8 @@ CDEFINES   = -DNO_STDBOOL
 LIBS       = ${CLIB}
 
 # Objects to build, using the format o.<name> (will be varied for build type)
-OBJS       = o.FindDrives \
-             o.TestFindDrives \
+OBJS       = o.Icon \
+             o.IconTest \
 
 # Space separated list of XML files for building documentation.
 #DOCSRC = <prm-in-xml-sources>
