--- a/Test/MakefileTestIconPos,fe1
+++ b/Test/MakefileTestIconPos,fe1
@@ -1,6 +1,11 @@
 #!/usr/bin/env riscos-amu -f
 # Makefile for testicon
 #
+# Note: Using BUILD32 as a proxy for Makefiles used by build service.
+
+ifdef BUILD32
+VPATH = @ ^.
+endif
 
 #
 # Program specific options:
@@ -24,22 +29,36 @@ TYPE       = aif
 
 # Comma-separated list of paths to use for includes, such as:
 #	<Lib$Dir>.LibName.
+ifdef BUILD32
+INCLUDES   = ^.,TBox:
+else
 CINCLUDES  = -I^.
+endif
 
 # Space separated list of defines to set, eg -DDEBUG
 CDEFINES   = -DNO_STDBOOL
 
 # Space separated list of libraries to link against.
-#LIBS       = ${CLIB}
+ifdef BUILD32
+LIBS       = ${CLIB}
+endif
 
 # Objects to build, using the format o.<name> (will be varied for build type)
 OBJS       = IconPosition \
-             TestIconPos \
+             TestIconPos
+
+ifdef BUILD32
+OBJS      := $(OBJS:%=o.%)
+endif
 
 # Space separated list of XML files for building documentation.
 #DOCSRC = <prm-in-xml-sources>
 
-include CApp # LibraryCommand
+ifdef BUILD32
+include LibraryCommand
+else
+include CApp
+endif
 
 #---------------------------------------------------------------------------
 # Dynamic dependencies:
