Add manipulation of the Tool commands.
The tool commands are able to locate variables which define the tools
for operating on discs in a generic way. This should allow us to
invoke them as separate commands so that they can be developed and
tested separately (and replaced by the user if necessary).

At present, only the initial functions have been created which give
the ability to determine what the command would be for the invocation
of the tool. Strictly that's all that's necessary for the functioning
of the feature - but it would be better if we also sent around the
messages as well.

Tests have been written to check the behaviour of the tool as well.
This only covers the variable at present.

--- a/.robuild.yaml
+++ b/.robuild.yaml
@@ -27,12 +27,15 @@ jobs:
       - echo +++ Tests
       - amu -f MakefileTestFindDrives
       - amu -f MakefileTestIcons
+      - amu -f MakefileTestTools
 
       # Run the tests (which should at least not crash)
       - echo + Test find drives
       - /aif32.TestFindDrives
       - echo + Test icon selection
       - /aif32.TestIcons
+      - echo + Test tool operations
+      - /aif32.TestTools
 
       # Build the module
       - echo +++ Module
