--- a/MakefileCJF,fe1
+++ b/MakefileCJF,fe1
@@ -42,6 +42,7 @@ OBJS       = \
              o.Main \
              o.FindDrives \
              o.Icon \
+             o.Tools \
 
 FORTIFY   ?= no
 
