--- a/MakefileTestFindDrives,fe1
+++ b/MakefileTestFindDrives,fe1
@@ -35,6 +35,7 @@ LIBS       = ${CLIB}
 # Objects to build, using the format o.<name> (will be varied for build type)
 OBJS       = o.FindDrives \
              o.TestFindDrives \
+             o.FSParameters
 
 # Space separated list of XML files for building documentation.
 #DOCSRC = <prm-in-xml-sources>
