Fix for CI failing to build with the new file.
Because the CI uses a separate Makefile, it's harder to work
with, and sometimes breaks. Could be modified to work in both
states.

--- a/MakefileCJF,fe1
+++ b/MakefileCJF,fe1
@@ -42,6 +42,7 @@ OBJS       = \
              o.Main \
              o.FindDrives \
              o.Icon \
+             o.IconPosition \
 
 FORTIFY   ?= no
 
