--- a/MakefileTestTools,fe1
+++ b/MakefileTestTools,fe1
@@ -1,11 +1,11 @@
 #!/usr/bin/env riscos-amu -f
-# Makefile for testfinddrives
+# Makefile for testtools
 #
 
 #
 # Program specific options:
 #
-COMPONENT  = testfinddrives
+COMPONENT  = testtools
 
 # Specifies additional targets for startup
 #INITTARGET = inittarget
@@ -33,9 +33,8 @@ CDEFINES   = -DNO_STDBOOL
 LIBS       = ${CLIB}
 
 # Objects to build, using the format o.<name> (will be varied for build type)
-OBJS       = o.FindDrives \
-             o.TestFindDrives \
-             o.FSParameters
+OBJS       = o.Tools \
+             o.TestTools \
 
 # Space separated list of XML files for building documentation.
 #DOCSRC = <prm-in-xml-sources>
