--- a/MakefileCJF,fe1
+++ b/MakefileCJF,fe1
@@ -42,9 +42,9 @@ OBJS       = \
              o.Main \
              o.FindDrives \
              o.Icon \
-             o.IconPosition \
              o.Tools \
              o.FSParameters \
+             o.BarIcon \
 
 FORTIFY   ?= no
 
