Moved command handling to it's own file.

--- a/MakefileCJF,fe1
+++ b/MakefileCJF,fe1
@@ -45,8 +45,7 @@ OBJS       = \
              o.Tools \
              o.FSParameters \
              o.BarIcon \
-             o.FS \
-
+             o.Commands \
 
 FORTIFY   ?= no
 
