--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,5 @@
 c/* gitlab-language=c linguist-language=c
 h/* gitlab-language=c linguist-language=c
 s/* gitlab-language=armasm linguist-language=assembly
+**/c/* gitlab-language=c linguist-language=c
+**/h/* gitlab-language=c linguist-language=c
