Move the FS default sprites database to a separate file.
The FS default sprites database had been part of the Icon code, but
it's not really part of the Icon system. It's a standalone database
of details about the filing systems. It should be separate. It can
then be tested separately to make sure that it does what it needs
to.

This change moves the sprites database to a separate file, and creates
the FSNumbers header which can be used in a more general way. The
FSNumbers header mirrors the C:riscos.h.FSNumbers header, which is
present in my build environment but not elsewhere.

Also fixes a couple of the makefiles that were failing to run
properly.

--- a/.robuild.yaml
+++ b/.robuild.yaml
@@ -30,6 +30,7 @@ jobs:
       - amu -f MakefileTestIcons
       - amu -f MakefileTestBarIcon
       - amu -f MakefileTestFS
+      - amu -f MakefileTestFSDefaults
       - amu -f MakefileTestTools
       - dir ^
 
@@ -41,6 +42,8 @@ jobs:
       - /aif32.TestIcons
       - echo + Test iconbar
       - /aif32.TestBarIcon
+      - echo + Test FS defaults
+      - /aif32.TestFSDefaults
       - echo + Test FS management
       - /aif32.TestFS
       - echo + Test tool operations
