--- a/MakefileCJF,fe1
+++ b/MakefileCJF,fe1
@@ -44,6 +44,7 @@ OBJS       = \
              o.Icon \
              o.Tools \
              o.FS \
+             o.FSDefaults \
              o.FSParameters \
              o.BarIcon \
              o.Commands \
