--- a/Test/MakefileTestFSDefaults,fe1
+++ b/Test/MakefileTestFSDefaults,fe1
@@ -1,5 +1,5 @@
 #!/usr/bin/env riscos-amu -f
-# Makefile for testicon
+# Makefile for testfsdefaults
 #
 # Note: Using BUILD32 as a proxy for Makefiles used by build service.
 
@@ -10,7 +10,7 @@ endif
 #
 # Program specific options:
 #
-COMPONENT  = testbaricon
+COMPONENT  = testfsdefaults
 
 # Specifies additional targets for startup
 #INITTARGET = inittarget
@@ -44,14 +44,8 @@ LIBS       = ${CLIB}
 endif
 
 # Objects to build, using the format o.<name> (will be varied for build type)
-OBJS       = TestBarIcon \
-             BarIcon \
-             FS \
-             FSParameters \
-             Icon \
-             StringUtils \
-             FSDefaults \
-
+OBJS       = FSDefaults \
+             TestFSDefaults
 
 ifdef BUILD32
 OBJS      := $(OBJS:%=o.%)
