--- a/.robuild.yaml
+++ b/.robuild.yaml
@@ -28,9 +28,10 @@ jobs:
       - dir Test
       - amu -f MakefileTestFindDrives
       - amu -f MakefileTestIcons
-      - amu -f MakefileTestIconPos
-      - dir ^
+      - amu -f MakefileTestBarIcon
+      - amu -f MakefileTestFS
       - amu -f MakefileTestTools
+      - dir ^
 
       # Run the tests (which should at least not crash)
       - dir Test
@@ -38,11 +39,13 @@ jobs:
       - /aif32.TestFindDrives
       - echo + Test icon selection
       - /aif32.TestIcons
-      - echo + Test icon positioning
-      - /aif32.TestIconPos
-      - dir ^
+      - echo + Test iconbar
+      - /aif32.TestBarIcon
+      - echo + Test FS management
+      - /aif32.TestFS
       - echo + Test tool operations
       - /aif32.TestTools
+      - dir ^
 
       # Build the module
       - echo +++ Module
