--- a/Test/MakefileTestBarIcon,fe1
+++ b/Test/MakefileTestBarIcon,fe1
@@ -51,6 +51,7 @@ OBJS       = TestBarIcon \
              Icon \
              StringUtils \
              FSDefaults \
+             Errors \
 
 
 ifdef BUILD32
