--- a/Test/MakefileTestIcons,fe1
+++ b/Test/MakefileTestIcons,fe1
@@ -39,6 +39,7 @@ OBJS       = o.TestIcons \
              o.Icon \
              o.StringUtils \
              o.FSDefaults \
+             o.Errors \
 
 # Space separated list of XML files for building documentation.
 #DOCSRC = <prm-in-xml-sources>
