--- a/MakefileCJF,fe1
+++ b/MakefileCJF,fe1
@@ -1,11 +1,11 @@
 #!/usr/bin/env riscos-amu -f
-# Makefile for filerx
+# Makefile for OmniDisc
 #
 
 #
 # Program specific options:
 #
-COMPONENT  = filerx
+COMPONENT  = OmniDisc
 
 # Specifies additional targets for startup
 #INITTARGET = inittarget
@@ -37,8 +37,8 @@ CDEFINES   = -DNO_STDBOOL
 # Objects to build, using the format o.<name> (will be varied for build type)
 OBJS       = \
              o.Enter \
-             o.FilerX \
-             o.FilerXHdr \
+             o.OmniDisc \
+             o.OmniDiscHdr \
              o.Main \
              o.FindDrives \
              o.Icon \
@@ -49,25 +49,27 @@ OBJS       = \
              o.BarIcon \
              o.Commands \
              o.StringUtils \
+             o.Errors \
+
 
 FORTIFY   ?= no
 
 include CModule
 
 # Additional dependencies
-$(OZDIR).Module ${OZDIR}.FilerX: h.FilerXHdr
+$(OZDIR).Module ${OZDIR}.OmniDisc: h.OmniDiscHdr
 
 # Export rules
 # For any files you export with EXPORTS you may need to include an
 # export rule
-${EXP_C_H}.${COMPONENT}SWIs: cmhg.modhead
-       ${CMHG} ${CMHGFLAGS} -xh $@ cmhg.modhead
+${EXP_C_H}.${COMPONENT}SWIs: cmhg.OmniDisc
+       ${CMHG} ${CMHGFLAGS} -xh $@ cmhg.OmniDisc
 # To export bare files you can use the ${CP} command:
 # ${EXP_LIB}.${COMPONENT}.h.myheader: h.myheader
 #        ${CP} $?  $@  ${CPFLAGS}
 
 cleantarget:
-           ${RM} h.modhead
+           ${RM} h.OmniDiscHdr
 # This clean target removes any module header file that was built.
 
 #---------------------------------------------------------------------------
